--- a/HTML/aboutus.html
+++ b/HTML/aboutus.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/CSS/Navigation CSS/navbar.css">
-    <link rel="stylesheet" href="/CSS/Logo CSS/logo.css">
-    <link rel="stylesheet" href="/CSS/Video Css/video.css">
-    <link rel="stylesheet" href="/CSS/Footer CSS/footer.css">
+    <link rel="stylesheet" href="/CSS/NavigationCSS/navbar.css">
+    <link rel="stylesheet" href="/CSS/LogoCSS/logo.css">
+    <link rel="stylesheet" href="/CSS/VideoCss/video.css">
+    <link rel="stylesheet" href="/CSS/FooterCSS/footer.css">
     <link rel="stylesheet" href="/CSS/aboutusCSS/aboutus.css">
     <script src="/JavaScript/nav.js"></script>
     <script src="https://cdn.tiny.cloud/1/y34kgnu11spmsg0tw5qk49mq9xb3g6vwk6awrye8jm4ehslo/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
@@ -26,7 +26,7 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-              <a href="/home.html"><img src="/All-images/HomePage-Images/mainlogo.svg" alt="logo"></a>
+              <a href="/home.html"><img src="/All-images/HomePageImages/mainlogo.svg" alt="logo"></a>
             </div> <nav id="menu"></nav></div>
         <div class="dropdown">
             <button class="dropbtn"><i style="color: #2a4e07;" class="fa fa-bars"></i></button>
@@ -38,7 +38,7 @@
                 <p>This is a Student Project for Front End Web Development Course by Harpreet Singh. I'm studying at manukau Institue of Technoogy. which is based in Auckland
                     In this project I'm focusing more on electric vehicles and there impact on enviroment and How Electric vehicles are the future. Thanks for Visiting us today.
                 </p>
-                <img src="/All-Images/aboutus-images/evgraphic_petovarga_sstock-removebg-preview.png" alt="">
+                <img src="/All-Images/aboutusimages/evgraphic_petovarga_sstock-removebg-preview.png" alt="">
             </div> 
           </div>
           <form action="/" method="get" class="form" id="form">
@@ -96,7 +96,7 @@
                 <div class="contact-right">
                     <h3>Reach us</h3>
                   <div class="tableimg">
-                    <img src="/All-Images/HomePage-Images/EV Revolution.svg" alt="">
+                    <img src="/All-Images/HomePageImages/EV Revolution.svg" alt="">
                   </div> 
                     <table>
                         <tr>
@@ -137,7 +137,7 @@
         <div class="pop-up" id="modal">
           <div class="pop-up-message">
             <h1>Thank you <br> for subscribing for updates</h1>
-            <img src="/All-Images/aboutus-images/bell-icon.svg" alt="photo">
+            <img src="/All-Images/aboutusimages/bell-icon.svg" alt="photo">
             <h3>You are all set.</h3>
             <button class="button" id="close">Done</button>
           </div>
@@ -146,7 +146,7 @@
         <div class="pop-up" id="modal-request">
           <div class="pop-up-message">
             <h1>Your Request has been submitted successfully. We will contact you within 48 working hours.</h1>
-            <img src="/All-Images/aboutus-images/done.png" alt="photo">
+            <img src="/All-Images/aboutusimages/done.png" alt="photo">
             <h3>Thanks</h3>
             <button class="button" id="close-request">Close</button>
           </div>
