--- a/HTML/fossilfuel.html
+++ b/HTML/fossilfuel.html
@@ -7,10 +7,10 @@
     , initial-scale=1.0">
     <title>Petrol|EVrevolution</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/CSS/Navigation CSS/navbar.css">
-    <link rel="stylesheet" href="/CSS/Footer CSS/footer.css">
-    <link rel="stylesheet" href="/CSS/Logo CSS/logo.css">
-    <link rel="stylesheet" href="/CSS/Video Css/video.css">
+    <link rel="stylesheet" href="/CSS/NavigationCSS/navbar.css">
+    <link rel="stylesheet" href="/CSS/FooterCSS/footer.css">
+    <link rel="stylesheet" href="/CSS/LogoCSS/logo.css">
+    <link rel="stylesheet" href="/CSS/VideoCss/video.css">
     <link rel="stylesheet" href="/CSS/fossilfuelCSS/fosillfuel.css">
     <script src="/JavaScript/nav.js"></script>
 </head>
@@ -19,7 +19,7 @@
     <div class="main-container">
         <div class="navbar">
             <div class="logo">
-                <a href="/home.html"><img src="/All-images/HomePage-Images/mainlogo.svg" alt="logo"></a>
+                <a href="/home.html"><img src="/All-images/HomePageImages/mainlogo.svg" alt="logo"></a>
             </div>  
             <nav id="menu"></nav> 
         </div>
