--- a/HTML/whyev.html
+++ b/HTML/whyev.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EVRevolution-Why EV</title>
-    <link rel="stylesheet" href="/CSS/WhyEV-page2-CSS/whyEV.css">
-    <link rel="stylesheet" href="/CSS/Logo CSS/logo.css">
-    <link rel="stylesheet" href="/CSS/Navigation CSS/navbar.css">
-    <link rel="stylesheet" href="/CSS/Video Css/video.css">
-    <link rel="stylesheet" href="/CSS/Footer CSS/footer.css">
+    <link rel="stylesheet" href="/CSS/WhyEVCSS/whyEV.css">
+    <link rel="stylesheet" href="/CSS/LogoCSS/logo.css">
+    <link rel="stylesheet" href="/CSS/NavigationCSS/navbar.css">
+    <link rel="stylesheet" href="/CSS/VideoCss/video.css">
+    <link rel="stylesheet" href="/CSS/FooterCSS/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="/JavaScript/nav.js"></script>
 </head>
@@ -18,7 +18,7 @@
     <div class="main-container">
         <div class="navbar">
             <div class="logo">
-                <a href="/home.html"><img src="/All-images/HomePage-Images/mainlogo.svg" alt="logo"></a>
+                <a href="/home.html"><img src="/All-images/HomePageImages/mainlogo.svg" alt="logo"></a>
             </div>  
             <nav id="menu"></nav> 
         </div>
@@ -30,7 +30,7 @@
         <div class="main-header">
                   <div class="image-grid">
                       <div class="first-img-grid">
-                        <img src="/All-images/WhyEV-images/insideev.png" alt="">
+                        <img src="/All-images/WhyEVimages/insideev.png" alt="">
                       </div>
                       <div class="sec-img-grid">
                         <h1>Electric vehicles (EVs) are vehicles that run on electricity and which can be plugged 
@@ -44,22 +44,22 @@
           <!------------photos with graphs and data ------------>
         <div class="graph">
             <div class="grid-1">
-                <img src="/All-images/WhyEV-images/nzenergy.gif"alt="photo">
+                <img src="/All-images/WhyEVimages/nzenergy.gif"alt="photo">
             </div>
             <div class="grid-2">
-                <img src="/All-images/WhyEV-images/graph3.jpg" alt="photo">
+                <img src="/All-images/WhyEVimages/graph3.jpg" alt="photo">
             </div>
             <div class="grid-4">
-                <img src="/All-images/WhyEV-images/graph4.jpg"alt="photo">
+                <img src="/All-images/WhyEVimages/graph4.jpg"alt="photo">
             </div>
             <div class="grid-4">
-                <img src="/All-images/WhyEV-images/convertedgraph.jpg" alt="photo">
+                <img src="/All-images/WhyEVimages/convertedgraph.jpg" alt="photo">
             </div>
         </div>
         <div class="why-ev">
             <h1>Why to choose Electric Vehicles</h1>
             <div class="tesla-img">
-                <img src="/All-images/WhyEV-images/tesla-nice-removebg-preview.png" alt="">
+                <img src="/All-images/WhyEVimages/teslanice.png" alt="">
             </div>
         </div>
           <!------------Grid layout ------------>
