--- a/home.html
+++ b/home.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/CSS/HomeCSS/home.css">
-    <link rel="stylesheet" href="/CSS/NavigationCSS/navbar.css">
-    <link rel="stylesheet" href="/CSS/LogoCSS/logo.css">
-    <link rel="stylesheet" href="/CSS/VideoCss/video.css">
-    <link rel="stylesheet" href="/CSS/FooterCSS/footer.css">
-    <script src="/JavaScript/nav.js"></script>
+    <link rel="stylesheet" href="CSS/HomeCSS/home.css">
+    <link rel="stylesheet" href="CSS/NavigationCSS/navbar.css">
+    <link rel="stylesheet" href="CSS/LogoCSS/logo.css">
+    <link rel="stylesheet" href="CSS/VideoCss/video.css">
+    <link rel="stylesheet" href="CSS/FooterCSS/footer.css">
+    <script src="JavaScript/nav.js"></script>
     <title>EV Revolution</title>
 </head>
 
@@ -20,7 +20,7 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <a href="/home.html"><img src="/All-images/HomePageImages/mainlogo.svg" alt="Logo"></a>
+                <a href="home.html"><img src="All-images/HomePageImages/mainlogo.svg" alt="Logo"></a>
             </div>  
             <nav id="menu"></nav>    
         </div>
@@ -37,7 +37,7 @@
                         Why we need to adopt this change and how we saving our world and lives doing
                         so <span style="color: #72a741; cursor: pointer;">click the button below and lets get Started</span> 
                     </p>
-                        <a class="btn" href="/HTML/whyev.html">  Lets Start  &#x2794;  </a>
+                        <a class="btn" href="HTML/whyev.html">  Lets Start  &#x2794;  </a>
             </div>
             <div class="col-2">
                 <img src="All-images/HomePageImages/modelx.png" alt="photo">
@@ -86,7 +86,7 @@
                         <i class="fa fa-quote-left"></i>
                         <p></i>We will not stop until every car on the road is electric.  </p>
                         <div class="quote">
-                            <img  src="/All-images/HomePageImages/elon.jpg" alt="">
+                            <img  src="All-images/HomePageImages/elon.jpg" alt="">
                             <h3>Elon Musk</h3>   
                             <h3>Co-founder: Tesla Motors</h3>  
                         </div>
@@ -95,7 +95,7 @@
                         <i class="fa fa-quote-left"></i>
                         <p></i>The time is right for electric cars- in fact, the time is critical</p>
                         <div class="quote">
-                            <img  src="/All-images/HomePageImages/carlos.jpg" alt="">
+                            <img  src="All-images/HomePageImages/carlos.jpg" alt="">
                             <h3>Carlos Ghosn</h3>   
                             <h3>Chairman: Nissan Motors</h3>    
                         </div>
@@ -106,7 +106,7 @@
                             reduce local emissions and help improve local air quality </i></p>
                         
                         <div class="quote">
-                            <img  src="/All-images/HomePageImages/kevin.jpg" alt="">
+                            <img  src="All-images/HomePageImages/kevin.jpg" alt="">
                             <h3>Kevin Emerson</h3>   
                             <h3>Book Writer</h3>    
                         </div>
@@ -120,19 +120,19 @@
                         <div class="row">
                            
                             <div class="col-5">
-                                <img src="/All-images/HomePageImages/nissan.png" alt="photo">
+                                <img src="All-images/HomePageImages/nissan.png" alt="photo">
                             </div>
                             <div class="col-5">
-                                <img src="/All-images/HomePageImages/toyota.svg" alt="photo">
+                                <img src="All-images/HomePageImages/toyota.svg" alt="photo">
                             </div>
                             <div class="col-5">
-                                <img src="/All-images/HomePageImages/teslalogo.png" alt="photo">
+                                <img src="All-images/HomePageImages/teslalogo.png" alt="photo">
                             </div>
                             <div class="col-5">
-                                <img src="/All-images/HomePageImages/audi.svg" alt="photo">
+                                <img src="All-images/HomePageImages/audi.svg" alt="photo">
                             </div>
                             <div class="col-5">
-                                <img src="/All-images/HomePageImages/bmw.png" alt="photo">
+                                <img src="All-images/HomePageImages/bmw.png" alt="photo">
                             </div>
                         </div>
                     </div>
