--- a/HTML/SharedMenu/shared-hamburger-nav.html
+++ b/HTML/SharedMenu/shared-hamburger-nav.html
@@ -1,6 +1,6 @@
 <a href="/home.html">Home</a>
-<a href="/HTML/whyev.html">Why EV</a>
-<a href="/HTML/fossilfuel.html">Fossil Fuel</a>
-<a href="/HTML/climate-impact.html">Climate impact</a>
-<a href="/HTML/News.html">News</a>
-<a href="/HTML/aboutus.html">About us</a>
+<a href="/whyev/whyev.html">Why EV</a>
+<a href="/fossilfuel/fossilfuel.html">Fossil Fuel</a>
+<a href="/climateImapct/climate-impact.html">Climate impact</a>
+<a href="/news/News.html">News</a>
+<a href="/about/aboutus.html">About us</a>
