--- a/HTML/SharedMenu/shared-nav.html
+++ b/HTML/SharedMenu/shared-nav.html
@@ -1,8 +1,8 @@
 <ul>
     <li><a href="/home.html">Home</a></li>
-    <li><a href="/HTML/whyev.html">Why EV</a></li>
-    <li><a href="/HTML/fossilfuel.html">Fossil Fuel</a></li>
-    <li><a href="/HTML/climate-impact.html">Climate Impact</a></li>
-    <li><a href="/HTML/News.html">News</a></li>
-    <li><a href="/HTML/aboutus.html">About Us</a></li>
+    <li><a href="/whyev/whyev.html">Why EV</a></li>
+    <li><a href="/fossilfuel/fossilfuel.html">Fossil Fuel</a></li>
+    <li><a href="/climateImapct/climate-impact.html">Climate Impact</a></li>
+    <li><a href="/news/News.html">News</a></li>
+    <li><a href="/about/aboutus.html">About Us</a></li>
 </ul>
