--- a/climateImapct/climate-impact.html
+++ b/climateImapct/climate-impact.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Climate|EVrevolution</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/CSS/NavigationCSS/navbar.css">
-    <link rel="stylesheet" href="/CSS/FooterCSS/footer.css">
-    <link rel="stylesheet" href="/CSS/LogoCSS/logo.css">
-    <link rel="stylesheet" href="/CSS/VideoCss/video.css">
-    <link rel="stylesheet" href="/CSS/climateCSS/climate.css">
-    <script src="/JavaScript/nav.js"></script>
+    <link rel="stylesheet" href="/navbar.css">
+    <link rel="stylesheet" href="/footer.css">
+    <link rel="stylesheet" href="/logo.css">
+    <link rel="stylesheet" href="/video.css">
+    <link rel="stylesheet" href="climate.css">
+    <script src="/nav.js"></script>
 </head>
 <body>
       <!------------Main Header and navigation ------------>
    <div class="climate-container">
     <div class="navbar">
         <div class="logo">
-     <a href="/home.html"><img src="/All-images/HomePageImages/mainlogo.svg" alt="logo"></a>       </div>  
+     <a href="/home.html"><img src="/home/mainlogo.svg" alt="logo"></a>       </div>  
         <nav id="menu"></nav> 
     </div>
     <div class="dropdown">
@@ -55,10 +55,10 @@
               powered by internal combustion engines.The Union of Concerned Scientists has done the math and has 
               a great EV Emissions Tool on its website. You can plug in your zipcode and any make and model of
                EV to find out what emissions it would be responsible for, per mile driven.</p>
-               <img src="/All-Images/Climateimpactimages/Carbon-footprint-transport.png" alt="photo">
+               <img src="Carbon-footprint-transport.png" alt="photo">
                <p>In addition to substantially reducing greenhouse gas emissions, electric vehicles significantly cut
                     down on the pollutants released by gas-powered cars that cause so many public health problems. <br> <br>
-                    <img src="/All-Images/Climateimpactimages/Carbon-footprint-for-a-NZ-household-all-blue.png" alt="">
+                    <img src="Carbon-footprint-for-a-NZ-household-all-blue.png" alt="">
                 In sum, the benefits of electric vehicles are huge: we cannot meet our climate goals without them and 
                 they are crucial to bettering our public health. Though our Drive Green program focuses on passenger
                  vehicles, we are strong proponents of electrifying everything, particularly public transportation.</p>
@@ -67,7 +67,7 @@
                     <h1>EV Benefits Increase Over Time</h1>
                     <p>The environmental benefits of electric vehicles will only get better with time. Why?</p>
                     <div class="green-car">
-                        <img src="/All-Images/Climateimpactimages/electric-vehicles-Graas-removebg-preview.png">
+                        <img src="electric-vehicles-Graas-removebg-preview.png">
                     </div>
                     <ul>
                         <li>Newer models of electric vehicles are more efficient in terms of the number of miles
@@ -84,16 +84,16 @@
                   <!------------page bottom photos using grid------------>
                     <div class="page-bottom-photos">
                         <div class="grid-photo1">
-                            <img src="/All-Images/Climateimpactimages/1.png">
+                            <img src="1.png">
                         </div>
                         <div class="grid-photo2">
-                            <img src="/All-Images/Climateimpactimages/2.png">
+                            <img src="2.png">
                         </div>
                         <div class="grid-photo1">
-                            <img src="/All-Images/Climateimpactimages/3.png">
+                            <img src="3.png">
                         </div>
                         <div class="grid-photo2">
-                            <img src="/All-Images/Climateimpactimages/4.png" alt="">
+                            <img src="4.png" alt="">
                         </div>
                     </div>     
             </div>
