--- a/fossilfuel/fossilfuel.html
+++ b/fossilfuel/fossilfuel.html
@@ -7,19 +7,19 @@
     , initial-scale=1.0">
     <title>Petrol|EVrevolution</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/CSS/NavigationCSS/navbar.css">
-    <link rel="stylesheet" href="/CSS/FooterCSS/footer.css">
-    <link rel="stylesheet" href="/CSS/LogoCSS/logo.css">
-    <link rel="stylesheet" href="/CSS/VideoCss/video.css">
-    <link rel="stylesheet" href="/CSS/fossilfuelCSS/fosillfuel.css">
-    <script src="/JavaScript/nav.js"></script>
+    <link rel="stylesheet" href="/navbar.css">
+    <link rel="stylesheet" href="/footer.css">
+    <link rel="stylesheet" href="/logo.css">
+    <link rel="stylesheet" href="/video.css">
+    <link rel="stylesheet" href="fosillfuel.css">
+    <script src="/nav.js"></script>
 </head>
 <body>
   <!------------Main Header and navigation ------------>
     <div class="main-container">
         <div class="navbar">
             <div class="logo">
-                <a href="/home.html"><img src="/All-images/HomePageImages/mainlogo.svg" alt="logo"></a>
+                <a href="/home.html"><img src="/home/mainlogo.svg" alt="logo"></a>
             </div>  
             <nav id="menu"></nav> 
         </div>
@@ -40,7 +40,7 @@
                 quantities of coal, oil and gas, and it’s driven us into a full-blown climate emergency.</h2>  
           </div>
           <div class="first-photo">
-              <img src="/All-Images/Petrol&Diesel/people-vs-oil-banner-houston-hero.jpg" alt="">
+              <img src="people-vs-oil-banner-houston-hero.jpg" alt="">
               <h3>The industry’s bad behavior doesn’t stop with the carbon pollution that causes 
                   climate change. Here are eight reasons why we need to phase out fossil fuels once and for all.</h3>
           </div>
@@ -63,7 +63,7 @@
                              moving forward (known as “developed reserves”) would by themselves push us past our climate targets.
                      </p>
                      <div  class="sec-photo">
-                        <div><img src="/All-Images/Petrol&Diesel/ppt_fig_oci_budgets-1.png" alt="photo"></div>
+                        <div><img src="ppt_fig_oci_budgets-1.png" alt="photo"></div>
                      </div>
                     <h1>3. The fossil fuel industry wants more</h1>
                     <p>Despite the crystal clear warnings from scientists, and the evidence pouring in 
@@ -74,7 +74,7 @@
                             literally betting billions on us failing to address climate change, and it’s unacceptable.</p>
                             <div  class="sec-photo">
                                 <div>
-                                    <img src="/All-Images/Petrol&Diesel/guide_fossilfuels_gettyimages-649028933_rm_240066.jpg" alt="photo">
+                                    <img src="guide_fossilfuels_gettyimages-649028933_rm_240066.jpg" alt="photo">
                                     <p>Suncor Mine and tailings ponds near Fort McMurray, Alberta, Canada</p>
                                 </div>
                              </div>   
@@ -89,7 +89,7 @@
                          industry — now an urgent planetary crisis that threatens the lives of millions.</p>
                    
                          <div  class="sec-photo">
-                            <div><img src="/All-Images/Petrol&Diesel/GP0STPGVV_Web_size_with_credit_line3.jpg" alt="photo"></div>
+                            <div><img src="GP0STPGVV_Web_size_with_credit_line3.jpg" alt="photo"></div>
                          </div>
                          <h1>5. The fossil fuel industry mistreats workers</h1>
                          <p>Fossil fuel industry workers and the communities where they operate pay a price. 
@@ -110,7 +110,7 @@
                                         attempted rollback of clean air protections could lead to 80,000 additional
                                          deaths every decade.</p>
                                          <div  class="sec-photo">
-                                            <div><img src="/All-Images/Petrol&Diesel/GP0BNK_Web_size_with_credit_line4.jpg" alt=""></div>
+                                            <div><img src="GP0BNK_Web_size_with_credit_line4.jpg" alt=""></div>
                                          </div>
                                          <h1>7. Clean water? They’ll pollute that too</h1>
                                          <p>The water pollution story is no better. Time and time again, oil spills and explosions have
@@ -125,7 +125,7 @@
                                                 is often stored in unregulated impoundment ponds, and can easily leak or spill into waterways.</p>
                                                 <div  class="sec-photo">
                                                     <div>
-                                                        <img src="/All-Images/Petrol&Diesel/tarsands-pipeline-spills-map-5.png" alt="photo">
+                                                        <img src="tarsands-pipeline-spills-map-5.png" alt="photo">
                                                         <p>Map of 373 U.S. hazardous liquids pipelines spills from 2010 to present for 
                                                             TransCanada (green), Kinder Morgan (purple) and Enbridge (blue). Data: PHMSA & EIA.</p>
                                                     </div>
@@ -146,7 +146,7 @@
                                                                to thrive. That’s why we’re calling for presidential candidates to support a Green New Deal
                                                                 and a complete phase out of dangerous fossil fuels.</p>
                                                                 <div  class="sec-photo">
-                                                                    <div><img src="/All-Images/Petrol&Diesel/exhaust7.jpg" alt="photo"></div>
+                                                                    <div><img src="exhaust7.jpg" alt="photo"></div>
                                                                  </div>
           </div>
     </div>
